--- a/timer.html
+++ b/timer.html
@@ -245,6 +245,10 @@
             {url: 'https://www.svgrepo.com/show/416376/artificial-bot-intelligence.svg', color: 0},
             {url: 'https://www.svgrepo.com/show/177925/maths-technology.svg', color: 0},
             {url: 'https://www.svgrepo.com/show/450644/banana.svg', color: 0},
+            {url: 'https://www.svgrepo.com/show/483628/cute-pirate.svg', color: 0},
+            {url: 'https://www.svgrepo.com/show/420690/cupcake-dessert-food.svg', color: 0},
+            {url: 'https://www.svgrepo.com/show/140208/smiling-skeleton.svg', color: 0},
+
 
             // coloured images:
             {url: 'https://www.svgrepo.com/show/277709/rainbow.svg', color: 1},
@@ -257,6 +261,14 @@
             {url: 'https://www.svgrepo.com/show/405229/dna.svg', color: 1},
             {url: 'https://www.svgrepo.com/show/398270/seal.svg', color: 1},
             //{url: 'https://www.svgrepo.com/show/395982/carrot.svg', color: 1},
+            {url: 'https://www.svgrepo.com/show/422254/christmas-cookie-dessert-2.svg', color: 1},
+            {url: 'https://www.svgrepo.com/show/422269/christmas-decoration-pine.svg', color: 1},
+            {url: 'https://www.svgrepo.com/show/420350/christmas-clous-santa.svg', color: 1},
+            {url: 'https://www.svgrepo.com/show/398061/pile-of-poo.svg', color: 1},
+            {url: 'https://www.svgrepo.com/show/530670/double-helix.svg', color: 1},
+            {url: 'https://www.svgrepo.com/show/418888/atom-chemistry-laboratory.svg', color: 1},
+            {url: 'https://www.svgrepo.com/show/402841/umbrella.svg', color: 1}
+
 
         ];
 
@@ -916,7 +928,7 @@
                         
 						
                     }
-                }, 10);
+                }, 1000);
                 startPauseBtn.textContent = 'Pause';
             }
             isRunning = !isRunning;
