add a few more images, and add a debug option for testing

--- a/timer.html
+++ b/timer.html
@@ -186,6 +186,13 @@
     </div>
     <div id="colorOverlay" class="color-overlay"></div>
     <script>
+        let timer_length_seconds = 120;
+
+        const debug_mode = true;
+        if (debug_mode) {
+            timer_length_seconds = 5;
+        }
+
         const timer = document.getElementById('timer');
         const sectionText = document.getElementById('section-text');
         const startPauseBtn = document.getElementById('startPauseBtn');
@@ -230,18 +237,34 @@
         });
 
         const svgUrls = [
+            /*
+            // Put things here that we've seen too much, just to mix it up
+            {url: 'https://www.svgrepo.com/show/481099/big-crab-with-scissors.svg', color: 0},
+            {url: 'https://www.svgrepo.com/show/481091/lantern-anglerfish.svg', color: 0},
+            {url: 'https://www.svgrepo.com/show/487741/rocket.svg', color: 0},
+            {url: 'https://www.svgrepo.com/show/481832/witch-illustration-1.svg', color: 0},
+
+            {url: 'https://www.svgrepo.com/show/140755/penguin.svg', color: 1},
+            {url: 'https://www.svgrepo.com/show/4227/giraffe.svg', color: 1},
+            {url: 'https://www.svgrepo.com/show/104319/monkey.svg', color: 1},
+            {url: 'https://www.svgrepo.com/show/422254/christmas-cookie-dessert-2.svg', color: 1},
+            {url: 'https://www.svgrepo.com/show/422269/christmas-decoration-pine.svg', color: 1},
+            {url: 'https://www.svgrepo.com/show/420350/christmas-clous-santa.svg', color: 1},
+            {url: 'https://www.svgrepo.com/show/398061/pile-of-poo.svg', color: 1},
+            {url: 'https://www.svgrepo.com/show/530670/double-helix.svg', color: 1},
+            
+
+            //---- monochrome images:
             {url: 'https://www.svgrepo.com/show/481305/rabbit-4.svg', color: 0},
             {url: 'https://www.svgrepo.com/show/481277/cat-1.svg', color: 0},
             {url: 'https://www.svgrepo.com/show/513212/heart.svg', color: 0},
             {url: 'https://www.svgrepo.com/show/444994/chart-big-number-solid.svg', color: 0},
 			{url: 'https://www.svgrepo.com/show/481186/octopus-2.svg', color: 0},
 			{url: 'https://www.svgrepo.com/show/481278/butterfly.svg', color: 0},
-			{url: 'https://www.svgrepo.com/show/487741/rocket.svg', color: 0},
-            {url: 'https://www.svgrepo.com/show/481832/witch-illustration-1.svg', color: 0},
+			
             {url: 'https://www.svgrepo.com/show/481138/owl-4.svg', color: 0},
             {url: 'https://www.svgrepo.com/show/481384/crocodile-illustration-3.svg', color: 0},
-            {url: 'https://www.svgrepo.com/show/481099/big-crab-with-scissors.svg', color: 0},
-            {url: 'https://www.svgrepo.com/show/481091/lantern-anglerfish.svg', color: 0},
+            
             {url: 'https://www.svgrepo.com/show/416376/artificial-bot-intelligence.svg', color: 0},
             {url: 'https://www.svgrepo.com/show/177925/maths-technology.svg', color: 0},
             {url: 'https://www.svgrepo.com/show/450644/banana.svg', color: 0},
@@ -250,26 +273,24 @@
             {url: 'https://www.svgrepo.com/show/140208/smiling-skeleton.svg', color: 0},
 
 
-            // coloured images:
+            //---- coloured images:
             {url: 'https://www.svgrepo.com/show/277709/rainbow.svg', color: 1},
             {url: 'https://www.svgrepo.com/show/187784/earth-globe-global.svg', color: 1},
             {url: 'https://www.svgrepo.com/show/253015/rocket.svg', color: 1},
-            {url: 'https://www.svgrepo.com/show/140755/penguin.svg', color: 1},
-            {url: 'https://www.svgrepo.com/show/4227/giraffe.svg', color: 1},
-            {url: 'https://www.svgrepo.com/show/104319/monkey.svg', color: 1},
             {url: 'https://www.svgrepo.com/show/402819/tractor.svg', color: 1},
             {url: 'https://www.svgrepo.com/show/405229/dna.svg', color: 1},
             {url: 'https://www.svgrepo.com/show/398270/seal.svg', color: 1},
             //{url: 'https://www.svgrepo.com/show/395982/carrot.svg', color: 1},
-            {url: 'https://www.svgrepo.com/show/422254/christmas-cookie-dessert-2.svg', color: 1},
-            {url: 'https://www.svgrepo.com/show/422269/christmas-decoration-pine.svg', color: 1},
-            {url: 'https://www.svgrepo.com/show/420350/christmas-clous-santa.svg', color: 1},
-            {url: 'https://www.svgrepo.com/show/398061/pile-of-poo.svg', color: 1},
-            {url: 'https://www.svgrepo.com/show/530670/double-helix.svg', color: 1},
             {url: 'https://www.svgrepo.com/show/418888/atom-chemistry-laboratory.svg', color: 1},
-            {url: 'https://www.svgrepo.com/show/402841/umbrella.svg', color: 1}
+            {url: 'https://www.svgrepo.com/show/402841/umbrella.svg', color: 1},
 
 
+            {url: 'https://www.svgrepo.com/show/214872/ambulance.svg', color: 1},
+            {url: 'https://www.svgrepo.com/show/500053/fire-truck.svg', color: 1},
+            {url: 'https://www.svgrepo.com/show/318573/tooth.svg', color: 1}
+*/
+        {url: 'https://www.svgrepo.com/show/214872/ambulance.svg', color: 1},
+        {url: 'ding.svg', color: 0}
         ];
 
         let svgObjects = [];
@@ -305,7 +326,7 @@
 
         function updateSectionText() {
             const sectionIndex = Math.floor(time / 20) + 1;
-            sectionText.textContent = time < 120 ? `Section ${sectionIndex}` : 'Ding!';
+            sectionText.textContent = time < timer_length_seconds ? `Section ${sectionIndex}` : 'Ding!';
         }
 
 
@@ -911,7 +932,7 @@
                 startPauseBtn.textContent = 'Start';
             } else {
                 interval = setInterval(() => {
-                    if (time < 120) {
+                    if (time < timer_length_seconds) {
                         time++;
                         timer.textContent = formatTime(time);
                         updateBackgroundColor();
