--- a/timer.html
+++ b/timer.html
@@ -305,12 +305,13 @@
 
             //{url: 'ding.svg', color: 0},
 
-            {url: 'images/dna.svg', color: 1},
-            {url: 'images/ambulance.svg', color: 1},
+            //{url: 'images/dna.svg', color: 1},
+            //{url: 'images/ambulance.svg', color: 1},
             {url: 'images/letter_a.svg', color: 1},
             {url: 'images/Amber.webp', color: 1},
+            {url: 'images/amber_2.jpg', color: 1},
             {url: 'images/pulse.svg', color: 1},
-            {url: 'Numberblocks_One.webp', color: 1},
+            //{url: 'Numberblocks_One.webp', color: 1},
 
             /*
             {url: 'https://www.svgrepo.com/show/484762/ambulance', color: 1},
@@ -880,7 +881,7 @@
 
             let lives_list = [3, 3, 3, 4, 4, 5];
 
-            let click_effect_list = ["grow", "dodge"];
+            let click_effect_list = ["grow","grow","grow","grow","grow", "dodge"];
 
             // Create a base object with some random choices
             base_object = {
