Update image list

--- a/timer.html
+++ b/timer.html
@@ -305,12 +305,14 @@
 
             //{url: 'ding.svg', color: 0},
 
-            //{url: 'images/dna.svg', color: 1},
+            {url: 'images/dna.svg', color: 1},
             //{url: 'images/ambulance.svg', color: 1},
-            {url: 'images/letter_a.svg', color: 1},
+            //{url: 'images/letter_a.svg', color: 1},
             {url: 'images/Amber.webp', color: 1},
-            {url: 'images/amber_2.jpg', color: 1},
-            {url: 'images/pulse.svg', color: 1},
+            {url: 'images/Sandy.webp', color: 1},
+            {url: 'images/anatomical-heart-svgrepo-com.svg', color: 1},
+            //{url: 'images/amber_2.jpg', color: 1},
+            //{url: 'images/pulse.svg', color: 1},
             //{url: 'Numberblocks_One.webp', color: 1},
 
             /*
