add desert rescue

--- a/timer.html
+++ b/timer.html
@@ -188,7 +188,7 @@
     <script>
         let timer_length_seconds = 120;
 
-        const debug_mode = true;
+        const debug_mode = false;
         if (debug_mode) {
             timer_length_seconds = 5;
         }
@@ -310,12 +310,16 @@
             {url: 'images/helly_circle.png', color: 1},
             {url: 'images/jin_circle.png', color: 1},
 
+
+
             /*
             {url: 'images/dna.svg', color: 1},
             {url: 'images/ambulance.svg', color: 1},
             {url: 'images/letter_a.svg', color: 1},
             {url: 'images/Amber.webp', color: 1},
             {url: 'images/Sandy.webp', color: 1},
+            {url: 'images/Droney2.webp', color: 1},
+            {url: 'images/Keaton2.webp', color: 1},
             {url: 'images/anatomical-heart-svgrepo-com.svg', color: 1},
             */
             //{url: 'images/amber_2.png', color: 1},
