change file links to avoid using cache

--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Keith Simpson</title>
+</head>
+<body>
+  <a href="timer.html">Toothbrush Timer</a>
+</html>
+
