--- a/timer.html
+++ b/timer.html
@@ -341,6 +341,10 @@
             initial_width = window.innerWidth;
             initial_height = window.innerHeight;
 
+            // birthday special:
+            createConfetti();
+            releaseBalloons();
+
             if (celebration_effect == "confetti") {
                 //--- confetti:
                 createConfetti();
