--- a/timer.html
+++ b/timer.html
@@ -344,6 +344,7 @@
             // birthday special:
             createConfetti();
             releaseBalloons();
+            document.addEventListener('click', launchFirework);
 
             if (celebration_effect == "confetti") {
                 //--- confetti:
