revert birthday changes

--- a/timer.html
+++ b/timer.html
@@ -342,9 +342,9 @@
             initial_height = window.innerHeight;
 
             // birthday special:
-            createConfetti();
-            releaseBalloons();
-            document.addEventListener('click', launchFirework);
+            //createConfetti();
+            //releaseBalloons();
+            //document.addEventListener('click', launchFirework);
 
             if (celebration_effect == "confetti") {
                 //--- confetti:
