change starting message

--- a/timer.html
+++ b/timer.html
@@ -177,7 +177,7 @@
     </div>
     
     <div class="content">
-        <div id="section-text">Section 1</div>
+        <div id="section-text">Start Brushing 🪥</div>
         <div id="timer">00:00</div>
         <div class="button-container">
             <button id="startPauseBtn">Start</button>
@@ -416,7 +416,7 @@
             isRunning = false;
             celebration_showing = false;
             timer.textContent = '00:00';
-            sectionText.textContent = 'Section 1';
+            sectionText.textContent = 'Start Brushing 🪥';
             startPauseBtn.textContent = 'Start';
             document.body.style.backgroundColor = 'white';
 			document.body.style.color = 'black';
