turn off halloween effect

--- a/timer.html
+++ b/timer.html
@@ -330,12 +330,14 @@
             playDingSound(7 * 660, 3);
             document.body.style.backgroundColor = 'black';
             document.body.style.color = 'white';
-            // change background image
+            /*
+            // Halloween special: change background image
             document.body.style.backgroundImage = "url('https://media.istockphoto.com/id/115349254/vector/spider-web.jpg?s=612x612&w=0&k=20&c=ipA3fqGxN5KjiFrR87mF4EVRhNdRQb1MZ99PyJH8kmU=')";
             document.body.style.backgroundSize = "cover";  // This makes the image cover the entire container
             document.body.style.backgroundRepeat = "no-repeat";  // This prevents tiling
             document.body.style.backgroundPosition = "center";  // This centers the image
-            
+            */
+           
             //--- show celebration effect:
             if (celebration_effect == -1) {
                 var effects = Object.values(effectLookup);
