add customizable particle lifetime to firework effect and implement collision detection for SVG objects

--- a/timer.html
+++ b/timer.html
@@ -196,7 +196,7 @@
     <script>
         let timer_length_seconds = 120;
 
-        const debug_mode = false;
+        const debug_mode = true;
         if (debug_mode) {
             timer_length_seconds = 2;
             // add a note on screen to show we are in debug mode
