add snow effect

--- a/timer.html
+++ b/timer.html
@@ -526,6 +526,7 @@
                     }
                 }, 1000);
                 startPauseBtn.textContent = 'Pause';
+                createSnow();
             }
             isRunning = !isRunning;
         }
