Remove christmas effects

--- a/timer.html
+++ b/timer.html
@@ -526,7 +526,7 @@
                     }
                 }, 1000);
                 startPauseBtn.textContent = 'Pause';
-                createSnow();
+                //createSnow();
             }
             isRunning = !isRunning;
         }
