refactor code so each celebration has its own file

--- a/timer.html
+++ b/timer.html
@@ -212,8 +212,17 @@
     <!-- load image list from image_list.js -->
     <script src="image_list.js?v=<?= time(); ?>"></script>
     <!-- load celbration functions -->
-    <script src="celebration_functions.js?v=<?= time(); ?>"></script>
-    <script src="random_celebration_functions.js?v=<?= time(); ?>"></script>
+    
+    <script src="celebrations/balloons.js?v=<?= time(); ?>"></script>
+    <script src="celebrations/bubbles.js?v=<?= time(); ?>"></script>
+    <script src="celebrations/confetti.js?v=<?= time(); ?>"></script>
+    <script src="celebrations/fireworks.js?v=<?= time(); ?>"></script>
+    <script src="celebrations/flowers.js?v=<?= time(); ?>"></script>
+    <script src="celebrations/rainbow.js?v=<?= time(); ?>"></script>
+    <script src="celebrations/snow.js?v=<?= time(); ?>"></script>
+    <script src="celebrations/starfield.js?v=<?= time(); ?>"></script>
+        
+    <script src="celebrations/random_objects.js?v=<?= time(); ?>"></script>
 
 
     <svg id="planet1" style="display: none" viewBox="0 0 100 100">
