add room reverb estimator

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>Keith Simpson</title>
 </head>
 <body>
-  <a href="timer.html">Toothbrush Timer</a>
+  <a href="timer.html">Toothbrush Timer</a><br>
+  <a href="reverb.html">Toothbrush Timer</a><br>
 </html>
 
