--- a/meal_planner_v5.html
+++ b/meal_planner_v5.html
@@ -68,7 +68,7 @@
                     </div>
                 </div>
                 <!-- Days container - no scrolling, fits to available height -->
-                <div id="days-container" class="flex-1 p-2 space-y-2 flex flex-col"></div>
+                <div id="days-container" class="flex-1 p-1 space-y-1 flex flex-col bg-gray-200"></div>
             </div>
 
             <!-- Meals Column - Independent scrolling -->
@@ -249,11 +249,11 @@
                 const dateDisplay = dayDate.toLocaleDateString('en-US', { month: 'short', day: 'numeric' });
                 const plannedMeal = window.state.plannedMeals[dateString];
                 const dayEl = document.createElement('div');
-                dayEl.className = 'p-3 border border-gray-200 rounded-lg drop-zone flex-1 flex flex-col justify-between min-h-0';
+                dayEl.className = 'p-2 border border-gray-200 bg-white rounded-lg drop-zone flex-1 flex flex-col justify-between min-h-0';
                 dayEl.dataset.date = dateString;
                 dayEl.innerHTML = `
                     <div class="flex justify-between items-center flex-shrink-0">
-                        <p class="font-semibold text-gray-700">${dayOfWeek}</p>
+                        <p class="font-semibold text-sm text-gray-700">${dayOfWeek}</p>
                         <p class="text-sm text-gray-500">${dateDisplay}</p>
                     </div>
                     <div class="planned-meal-container flex-1 min-h-[40px] flex items-center">
