adjust days panel scrolling, adding overflow

--- a/meal_planner_v5.html
+++ b/meal_planner_v5.html
@@ -68,7 +68,7 @@
                     </div>
                 </div>
                 <!-- Days container - no scrolling, fits to available height -->
-                <div id="days-container" class="flex-1 p-1 space-y-1 flex flex-col bg-gray-200"></div>
+                <div id="days-container" class="flex-1 p-1 space-y-1 flex flex-col bg-gray-200 overflow-y-auto"></div>
             </div>
 
             <!-- Meals Column - Independent scrolling -->
