add padding so sunday doesn't drop off the page

--- a/meal_planner_v5.html
+++ b/meal_planner_v5.html
@@ -59,7 +59,7 @@
         <!-- Main Content -->
         <main class="flex-1 flex overflow-hidden">
             <!-- Days Column - Fixed height, no scrolling on mobile -->
-            <div class="w-2/5 md:w-1/3 border-r border-gray-200 flex flex-col bg-white">
+            <div class="w-2/5 md:w-1/3 border-r border-gray-200 flex flex-col bg-gray-200 pb-8">
                 <div class="p-3 border-b border-gray-200 flex justify-between items-center flex-shrink-0">
                     <h2 class="text-lg font-semibold">This Week</h2>
                     <div class="space-x-2">
