--- a/morning.html
+++ b/morning.html
@@ -56,7 +56,7 @@
 
     <!-- Main Scrollable Area -->
     <main class="flex-1 relative overflow-y-auto no-scrollbar" id="scroller">
-        <div class="container mx-auto max-w-lg relative min-h-[1000px] py-10 px-4">
+        <div class="container mx-auto max-w-lg relative min-h-[1000px] py-10 px-4  pr-32">
             
             <!-- Timeline Container -->
             <div class="relative ml-14 border-l border-slate-300 h-full" id="timeline-container">
@@ -177,7 +177,7 @@
         const START_MINUTE = 0;
         const END_HOUR = 9;
         const END_MINUTE = 0;
-        const PIXELS_PER_MINUTE = 6; // Adjusted for slightly more compact view
+        const PIXELS_PER_MINUTE = 5; // Adjusted for slightly more compact view
 
         // Calculate total minutes in timeline
         const startTotalMins = (START_HOUR * 60) + START_MINUTE;
